# pymahjong

./: CMakeLists.txt  MANIFEST.in  NOTICE  README.ja.md  README.md  THIRD_PARTY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: __init__.py  action.hpp  bindings.cpp  calsht_dw.cpp  calsht_dw.hpp  hash.hpp  hule.hpp  hupai.hpp  mianzi.hpp  mkind.cpp  sample.cpp  shoupai.hpp
tests/: test_regressions.py
